--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -436,11 +436,11 @@
  */
 
 @keyframes bpm-aura {
-   from { background-position:  0px; }
-     to { background-position: 500px; }
+    from { background-position:  0px; }
+    to { background-position: 500px; }
 }
 
-.bpflag-m::after {
+.bpflag-m::after{
     content: " ";
     width: 50px;
     height: 50px;
@@ -449,21 +449,131 @@
     position: relative;
     visibility: collapse;
     background-image: url(https://b.thumbs.redditmedia.com/tAK6nmFTMRPip8Dv0ZFLKIqrnrXuZXC7WAA3-v1kO1M.png) !important;
-    animation: aura 1s steps(10) infinite reverse;
+    animation: bpm-aura 1s steps(10) infinite reverse;
 }
 
-.bpmote-facehoof.bpflag-m::after,
-.bpmote-b38.bpflag-m::after,
-.bpmote-rfacehoof.bpflag-m::after,
-.bpmote-rb38.bpflag-m::after {
+.bpflag-m {
+    z-index: 1;
+    position: relative;
+}
+
+a[href|="/facehoof"][href*="-m"]::after,
+a[href|="/b38"][href*="-m"]::after,
+a[href|="/rfacehoof"][href*="-m"]::after,
+a[href|="/rb38"][href*="-m"]::after {
     transform: scale(0.8) translate(37px, -8px) rotate(-297deg);
     visibility: visible;
 }
 
-.bpmote-twibeam.bpflag-m::after,
-.bpmote-a23.bpflag-m::after,
-.bpmote-rtwibeam.bpflag-m::after,
-.bpmote-ra23.bpflag-m::after {
-    transform: scale(0.9) translate(13px,-16px) rotate(0deg);
+a[href|="/twibeam"][href*="-m"]::after,
+a[href|="/a23"][href*="-m"]::after,
+a[href|="/rtwibeam"][href*="-m"]::after,
+a[href|="/ra23"][href*="-m"]::after {
+    transform: scale(0.9) translate(13px, -16px) rotate(0deg);
+    visibility: visible;
+}
+
+a[href|="/twicrazy"][href*="-m"]::after,
+a[href|="/a21"][href*="-m"]::after,
+a[href|="/rtwicrazy"][href*="-m"]::after,
+a[href|="/ra21"][href*="-m"]::after {
+    transform: scale(1) translate(24px, -12px) rotate(17deg);
+    visibility: visible;
+}
+
+a[href|="/twidaw"][href*="-m"]::after,
+a[href|="/c33"][href*="-m"]::after,
+a[href|="/rtwidaw"][href*="-m"]::after,
+a[href|="/twidaww"][href*="-m"]::after,
+a[href|="/rtwidaww"][href*="-m"]::after,
+a[href|="/rc33"][href*="-m"]::after {
+    transform: scale(1) translate(5px, -14px) rotate(-20deg);
+    visibility: visible;
+}
+
+a[href|="/twiponder"][href*="-m"]::after,
+a[href|="/e08"][href*="-m"]::after,
+a[href|="/rtwiponder"][href*="-m"]::after,
+a[href|="/re08"][href*="-m"]::after {
+    transform: scale(1) translate(12px, -14px) rotate(0deg);
+    visibility: visible;
+}
+
+a[href|="/twipride"][href*="-m"]::after,
+a[href|="/a01"][href*="-m"]::after,
+a[href|="/rtwipride"][href*="-m"]::after,
+a[href|="/ra01"][href*="-m"]::after {
+    transform: scale(1) translate(23px, -14px) rotate(30deg);
+    visibility: visible;
+}
+
+a[href|="/twirage"][href*="-m"]::after,
+a[href|="/b29"][href*="-m"]::after,
+a[href|="/rtwirage"][href*="-m"]::after,
+a[href|="/rb29"][href*="-m"]::after {
+    transform: scale(1) translate(-13px, -8px) rotate(-46deg);
+    visibility: visible;
+}
+
+a[href|="/twiright"][href*="-m"]::after,
+a[href|="/satistwied"][href*="-m"]::after,
+a[href|="/a08"][href*="-m"]::after,
+a[href|="/rtwiright"][href*="-m"]::after,
+a[href|="/rsatistwied"][href*="-m"]::after,
+a[href|="/ra08"][href*="-m"]::after {
+    transform: scale(0.6) translate(9px, -32px) rotate(-20deg);
+    visibility: visible;
+}
+
+a[href|="/rc30"][href*="-m"]::after,
+a[href|="/twisad"][href*="-m"]::after,
+a[href|="/e30"][href*="-m"]::after,
+a[href|="/rtwisad"][href*="-m"]::after,
+a[href|="/re30"][href*="-m"]::after {
+    transform: scale(1) translate(9px, -13px) rotate(-4deg);
+    visibility: visible;
+}
+
+a[href|="/twisecret"][href*="-m"]::after,
+a[href|="/twiaside"][href*="-m"]::after,
+a[href|="/smackafilly"][href*="-m"]::after,
+a[href|="/e35"][href*="-m"]::after,
+a[href|="/rtwisecret"][href*="-m"]::after,
+a[href|="/rtwiaside"][href*="-m"]::after,
+a[href|="/rsmackafilly"][href*="-m"]::after,
+a[href|="/re35"][href*="-m"]::after {
+    transform: translate(-2px, -16px) rotate(-35deg) scale(0.8, 0.9);
+    visibility: visible;
+}
+
+a[href|="/twismile"][href*="-m"]::after,
+a[href|="/c11"][href*="-m"]::after,
+a[href|="/rtwismile"][href*="-m"]::after,
+a[href|="/rc11"][href*="-m"]::after {
+    transform: scale(1) translate(25px, -8px) rotate(51deg);
+    visibility: visible;
+}
+
+a[href|="/twismug"][href*="-m"]::after,
+a[href|="/c01"][href*="-m"]::after,
+a[href|="/rtwismug"][href*="-m"]::after,
+a[href|="/rc01"][href*="-m"]::after {
+    transform: scale(0.75) translate(-9px, -22px) rotate(-42deg);
+    visibility: visible;
+}
+
+a[href|="/twisquint"][href*="-m"]::after,
+a[href|="/b17"][href*="-m"]::after,
+a[href|="/rtwisquint"][href*="-m"]::after,
+a[href|="/rb17"][href*="-m"]::after {
+    transform: scale(0.8) translate(26px, -21px) rotate(47deg);
+    visibility: visible;
+}
+
+a[href|="/twistare"][href*="-m"]::after,
+a[href|="/c21"][href*="-m"]::after,
+a[href|="/rtwistare"][href*="-m"]::after,
+a[href|="/rc21"][href*="-m"]::after {
+    transform: scale(0.85) translate(-1px, -12px) rotate(-47deg);
     visibility: visible;
 }
