--- a/addon/discord/settings.css
+++ b/addon/discord/settings.css
@@ -1,3 +1,13 @@
+.bpm-label-container > label {
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+.bpm-info-span {
+    display: block;
+    margin-bottom: 10px;
+}
+
 .bpm-emote-list {
     overflow: auto;
     padding-top: 5px;
